alterado paleta de cores e adicionado botao de whattsapp

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <p class="apresentacao__conteudo__texto">Sou Ana Claudia Fennix. Terapeuta Treinadora de Inteligência Emocional, Palestrante, Especialista em Programação Neurolinguística, Coach, Master Coach de Inteligência Emocional.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas Redes</h2>
-                <a class="apresentacao__links__navegacao" href="#">Instagram</a>
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/anaclaudiafennix/">Instagram</a>
                 <a class="apresentacao__links__navegacao" href="#">Facebook</a>
+                <a class="apresentacao__links__navegacao" href="https://api.whatsapp.com/send?phone=5541997778960&text=Ol%C3%A1,%20Ana.%20Visitei%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20seu%20trabalho.%20">WhasttApp</a>
             </div>
         </section>
         <img class="apresentacao__imagem" src="assets/ana-claudia-terapeuta-perfil.jpg" alt="foto da Terapeuta Ana Claudia Fennix">
