adiciona pagina missao + openGraph

--- a/missao.html
+++ b/missao.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="#">Home</a>
             <a class="cabecalho__menu__link" href="missao.html">Missão</a>
             <a class="cabecalho__menu__link" href="#">Depoimentos</a>
             <a class="cabecalho__menu__link" href="#">Contato</a>
@@ -25,8 +25,11 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Uma vida mais leve e <strong class="titulo-destaque">próspera</strong> é uma combinação entre fazer boas escolhas e ter uma boa saúde mental!</h1>
-            <p class="apresentacao__conteudo__texto">Sou Ana Claudia Fennix. Terapeuta Treinadora de Inteligência Emocional, Palestrante, Especialista em Programação Neurolinguística, Coach, Master Coach de Inteligência Emocional.</p>
+            <h1 class="apresentacao__conteudo__titulo">Ajudar pessoas a se desenvolverem plenamente em todas as áreas da sua vida!</h1>
+            <p class="apresentacao__conteudo__texto">Além de todas as formações adquiridas nestes anos, invisto continuamente em conhecimento para estar sempre atualizada!</p>
+            <p class="apresentacao__conteudo__texto">Validação de centenas de pacientes e clientes atendidos em terapias e treinamentos</p>
+            <p class="apresentacao__conteudo__texto">Comprometimento e sigilo total com o seu caso. Cada ser humano é único. Entender e respeitar isso é a base do meu trabalho!</p>
+            <p class="apresentacao__conteudo__texto">Atendimento Presencial e Online. Escolha a melhor forma para começarmos nossa jornada!</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas Redes</h2>
                 <a class="apresentacao__links__navegacao" href="https://www.instagram.com/anaclaudiafennix/">Instagram</a>
