--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="missao.html">Missão</a>
             <a class="cabecalho__menu__link" href="#">Depoimentos</a>
-            <a class="cabecalho__menu__link" href="#">Contato</a>
+            <a class="cabecalho__menu__link" href="contato.html">Contato</a>
         </nav>
     </header>
     <main class="apresentacao">
