--- a/missao.html
+++ b/missao.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,10 +17,10 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="#">Home</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="missao.html">Missão</a>
             <a class="cabecalho__menu__link" href="#">Depoimentos</a>
-            <a class="cabecalho__menu__link" href="#">Contato</a>
+            <a class="cabecalho__menu__link" href="contato.html">Contato</a>
         </nav>
     </header>
     <main class="apresentacao">
